# schisaciaccole

./: .gitignore  Cargo.toml  README.md  build.rs
packaging/arch/: PKGBUILD
src/: main.rs
ui/: app-window.slint
