[package]
name = "schisaciaccole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
rand = "0.10.1"
rodio = "0.22.2"
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
lto = true
