[package]
name = "schisaciaccole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
env_logger = "0.11.10"
i-slint-core = "1.16.1"
log = "0.4.32"
rand = "0.10.1"
rodio = "0.22.2"
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.bundle]
name = "Schisaciaccole"
identifier = "com.openmove.schisaciaccole"
icon = ["assets/icon_256.png", "assets/icon_512.png", "assets/icon_128.png"]
resources = ["assets/game_over.mp3"]
category = "Utility"
short_description = "Countdown timer for time-boxed Scrum ceremonies"
long_description = """
Pick the wall-clock time your time-boxed Scrum ceremony must end and the timer
counts down precisely to that moment, regardless of when the meeting started.
"""
